add lib stand_auth_m33f.a to project

--- a/imported_project_report.html
+++ b/imported_project_report.html
@@ -381,7 +381,7 @@ h3 {
 }
 </style>
 <title>
-Project Import Report for mijia_ble_mesh</title>
+Project Import Report for mijia_ble_standard_2</title>
 </head>
 <body>
 <h1>
@@ -391,19 +391,19 @@ Project Import Summary</h1>
 <td style="border:1px solid">
 Import time</td>
 <td style="border:1px solid">
-2020-11-24 15:24:38</td>
+2020-11-26 20:04:58</td>
 </tr>
 <tr style="border:1px solid">
 <td style="border:1px solid">
 Original location</td>
 <td style="border:1px solid">
-D:\code\github\silabs\mijia_ble_mesh\.cproject</td>
+D:\code\github\silabs\mijia_ble_standard\.cproject</td>
 </tr>
 <tr style="border:1px solid">
 <td style="border:1px solid">
 Original project name</td>
 <td style="border:1px solid">
-mijia_ble_mesh</td>
+mijia_ble_standard</td>
 </tr>
 <tr style="border:1px solid">
 <td style="border:1px solid">
